--- a/index.html
+++ b/index.html
@@ -1,24 +1,8 @@
 <!DOCTYPE html>
-<html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pokemon Digital Photo Frame</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-  </style>
-  <script src="p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="sketch.js"></script>
-</head>
-
-<body>
-  <main>
-  </main>
-</body>
-
+<html>
+  <head>
+    <script src="chat.js"></script>
+  </head>
+  <body>
+  </body>
 </html>
